--- a/product_details.html
+++ b/product_details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Product Details</title>
   <link rel="stylesheet" href="css/all.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.rtl.min.css" integrity="sha384-WJUUqfoMmnfkBLne5uxXj+na/c7sesSJ32gI7GfCk4zO4GthUKhSEGyvQ839BC51" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -153,7 +153,7 @@
     </nav>
     <div class="nav-mobile d-lg-none">
      <div class="container d-lg-none">
-      <div class="content d-flex align-items-center justify-content-around">
+      <div class="content d-flex align-items-center justify-content-between">
         <div class="d-flex flex-column text-center">
           <i class="fa-solid fa-house"></i>
           <a href="#">الرئيسية</a>
