--- a/thankforshopping.html
+++ b/thankforshopping.html
@@ -19,7 +19,7 @@
                     <img src="img/thankforshopping/confetti 1.svg" alt="">
                     <p>شكرا لتسوقكم عبر متجرنا </p>
                     <p>رقم الطلب <span>#12345456</span></p>
-                    <p>عرض تفاصيل الفاتورة</p>
+                    <p><a href="Order_details.html">عرض تفاصيل الفاتورة</a></p>
                 </div>
                 <div class="contact">
                     <div>
