--- a/allcategories.html
+++ b/allcategories.html
@@ -243,7 +243,7 @@
               </div>
             </div>
           </div>
-            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5">
+            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5 allcategories-container">
               <div class="col mb-2">
                 <div class="content">
                   <div class="card px-2">
