--- a/cart.html
+++ b/cart.html
@@ -250,14 +250,14 @@
                             <span></span>
                     </div>
                 </div>
-                <div class="cart-details">
+                <div class="cart-details" data-remove="1">
                     <div class="row  d-flex align-items-center">
                     <div class="col-md-5">
                         <img src="img/cart/101 (2).svg" alt="">
                         <span>حليب جوز هند خالية من السكر(1لتر)</span>
                     </div>
                     <div class="col-md-2">
-                        <span>100 ر.س</span>
+                        <span>100</span>
                     </div>
                     <div class="col-md-2">
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
@@ -267,10 +267,10 @@
                               </div>
                     </div>
                     <div class="price-total col-md-2">
-                        <span>100 ر.س</span>
+                        <span>100 </span>
                     </div>
                     <div class="col-md-1">
-                        <img src="img/cart/Vector (55).svg" alt="">
+                        <img class="remove_item" id="1" src="img/cart/Vector (55).svg" alt="">
                     </div>
                     </div>
                 </div>               
@@ -292,27 +292,27 @@
                            <span></span>
                    </div>
                </div>
-               <div class="cart-details">
+               <div class="cart-details " data-remove="2">
                    <div class="row  d-flex align-items-center">
                    <div class="col-md-5">
                        <img src="img/cart/101 (2).svg" alt="">
                        <span>حليب جوز هند خالية من السكر(1لتر)</span>
                    </div>
                    <div class="col-md-2">
-                       <span>100 ر.س</span>
+                       <span class="price">100</span>
                    </div>
                    <div class="col-md-2">
                     <div class="btn-group" role="group" aria-label="Basic outlined example">
-                        <button type="button" class="increas btn btn-outline-secondary">+</button>
-                        <span class="span-increas btn btn-outline-secondary">5</span>
-                        <button type="button" class="mins btn btn-outline-secondary">-</button>
+                        <button type="button" class="increas1 btn btn-outline-secondary">+</button>
+                        <span class="span-increas1 btn btn-outline-secondary">5</span>
+                        <button type="button" class="mins1 btn btn-outline-secondary">-</button>
                       </div>
                     </div>
                    <div class="price-total col-md-2">
-                       <span>100 ر.س</span>
+                       <span>100</span>
                    </div>
                    <div class="col-md-1">
-                       <img src="img/cart/Vector (55).svg" alt="">
+                       <img class="remove_item" id="2" src="img/cart/Vector (55).svg" alt="">
                    </div>
                    </div>
                </div>
