--- a/product_details.html
+++ b/product_details.html
@@ -235,12 +235,12 @@
                     </div>
                     <div class="finish-cart d-flex">
                         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-outline-secondary">+</button>
-                            <span class="btn btn-outline-secondary">5</span>
-                            <button type="button" class="btn btn-outline-secondary">-</button>
+                            <button type="button" class="btn btn-outline-secondary increas_cart">+</button>
+                            <span class="btn btn-outline-secondary span-increas_cart">5</span>
+                            <button type="button" class="btn btn-outline-secondary decreas decreas_cart">-</button>
                           </div>
                           <div class="flex-grow-1">
-                          <button type="submit" class="submit btn btn-success w-100 ms-2"><a href="cart.html">اكمال الدفع</a><img src="img/payment/اكمال.svg" class="ms-2" alt=""></button>
+                          <button type="submit" class="addtocart2 submit btn btn-success w-100 ms-2"><a href="cart.html">اكمال الدفع</a><img src="img/payment/اكمال.svg" class="ms-2" alt=""></button>
                           </div>
                     </div>
                 </div>
@@ -469,6 +469,7 @@
   crossorigin="anonymous"
 ></script>
     <script src="js/main.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
